tests/expects/map_key_failure/test_tuple_key.expect
error: Invalid map key type: (i32, i32). Keys must be primitives (integers, floats, bool) or string pointers (*u8, *i8)
  --> map_key_failure/test_tuple_key.truk:2:12
  |
1 | fn main() : i32 {
2 |     var m: map[(i32, i32), i32] = make(@map[(i32, i32), i32]);
  |            ^
3 |     delete(m);
  |
error: Unknown variable type: map[(i32, i32), i32]
  --> map_key_failure/test_tuple_key.truk:2:5
  |
1 | fn main() : i32 {
2 |     var m: map[(i32, i32), i32] = make(@map[(i32, i32), i32]);
  |     ^
3 |     delete(m);
  |
error: Undefined identifier: m
  --> map_key_failure/test_tuple_key.truk:3:12
  |
2 |     var m: map[(i32, i32), i32] = make(@map[(i32, i32), i32]);
3 |     delete(m);
  |            ^
4 |     return 0;
  |
error: Failed to resolve argument type for delete
  --> map_key_failure/test_tuple_key.truk:3:11
  |
2 |     var m: map[(i32, i32), i32] = make(@map[(i32, i32), i32]);
3 |     delete(m);
  |           ^
4 |     return 0;
  |

Compilation failed with 4 error(s)
