tests/expects/map_key_failure/test_tuple_key.truk
fn main() : i32 {
    var m: map[(i32, i32), i32] = make(@map[(i32, i32), i32]);
    delete(m);
    return 0;
}
